Update OgcApiGeoJsonConverter.java
Tentative fix for 

```
{"code":"500","description":"Cannot invoke \"java.time.OffsetDateTime.toString()\" because \"x\" is null"}
```